# webgpu-engine

./: .gitignore  .mcp.json  AUDIO_FIX_FINAL.md  AUDIO_FIX_STATUS.md  AUDIO_REPLACEMENT_STATUS.md  CLAUDE.md  CODEBASE_FIXES_COMPLETE.md  Cargo.toml  DEBUG_INSTRUCTIONS.md  MATERIAL_FIX_SUMMARY.md  MATERIAL_UPDATE_FLOW.md  MERGE_BRANCHES.md  PLANNING.md  PROFILING.md  README.md  WINDOW_MANAGER_BORROW_FIX.md  demo_scene_generated.json  editor_layout.json  editor_settings.json  imgui_docking.ini  justfile  package-lock.json  run_audio_debug.bat  run_audio_trace.bat  run_with_audio.bat  test_audio.bat  test_audio.sh  test_debug.sh  test_editor.bat  test_material_updates.sh  test_scene_load.sh
editor/: Cargo.toml
editor/src/: component_registry_ui.rs  detached_window.rs  detached_window_manager.rs  dpi_utils.rs  editor_state.rs  enhanced_viewport_renderer.rs  lib.rs  panel_state.rs  safe_imgui_renderer.rs  scene_operations.rs  settings.rs  shared_state.rs  ui_metadata_renderer.rs  viewport_backend.rs  viewport_renderer_backend.rs  viewport_sys_integration.rs  viewport_workarounds.rs
editor/src/docking/: dock_zone.rs  docked_state.rs  mod.rs  tests.rs
editor/src/panels/: assets.rs  detachable.rs  hierarchy.rs  inspector.rs  mod.rs  viewport.rs
engine/: Cargo.toml
engine/src/: app.rs  audio_stub.rs  config.rs  lib.rs  test_ui_component.rs
engine/src/audio/: ambient.rs  components.rs  debug.rs  engine.rs  listener.rs  material.rs  mesh_occlusion.rs  mod.rs  panning.rs  physical_occlusion.rs  propagation.rs  raycast.rs  resources.rs  reverb.rs  source.rs  system.rs  tests.rs
engine/src/component_system/: field_access.rs  mod.rs  tests.rs  ui_metadata.rs
engine/src/core/: camera.rs  mod.rs
engine/src/dev/: debug_overlay.rs  mod.rs
engine/src/graphics/: asset_manager.rs  context.rs  culling.rs  frustum_culling_system.rs  material.rs  mesh.rs  mesh_library.rs  mesh_loader.rs  mod.rs  pipeline.rs  render_target.rs  renderer.rs  safe_scissor.rs  uniform.rs
engine/src/input/: mod.rs  state.rs
engine/src/io/: component_registry.rs  entity_mapper.rs  hot_reload.rs  mod.rs  scene.rs
engine/src/physics/: accumulator.rs  avbd_solver.rs  commands.rs  components.rs  constraints.rs  debug.rs  debug_visualization.rs  mod.rs  scene_validator.rs  simple_physics.rs  system.rs  systems.rs  tests.rs  world.rs
engine/src/profiling/: gpu.rs  mod.rs  tracy.rs
engine/src/scripting/: commands.rs  component_access.rs  components.rs  engine.rs  lifecycle_tracker.rs  mesh_registry.rs  mesh_upload_system.rs  mod.rs  property_parser.rs  property_types.rs  script.rs  script_init_system.rs  system.rs
engine/src/shaders/: basic.wgsl  debug_lines.wgsl  logarithmic_depth.wgsl  mod.rs  outline.wgsl
engine/src/utils/: mod.rs  paths.rs
engine/src/windowing/: mod.rs  window_manager.rs
engine/tests/: derive_macro_tests.rs  physics_avbd_solver_test.rs  physics_collision_debug_test.rs  physics_config_test.rs  physics_contact_points_test.rs  physics_direct_hecs_test.rs  physics_entity_test.rs  physics_minimal_test.rs  physics_ngs_correction_test.rs  physics_position_test.rs  physics_rest_test.rs  physics_rotation_test.rs  physics_scene_test.rs  physics_simple_gravity_test.rs  physics_simple_integration_test.rs  physics_torque_test.rs  simple_component_test.rs
engine/tests/physics/: collision_tests.rs  constraint_tests.rs  mod.rs  rigidbody_tests.rs
game/: Cargo.toml
game/assets/scenes/: AUDIO_PROPAGATION_README.md  README.md  README_PHYSICS_SCENES.md  audio_demo.json  audio_demo_visual.json  audio_propagation_demo.json  audio_rooms_demo.json  audio_test_simple.json  demo_scene.json  frustum_culling_demo.json  galaxy_scale_test.json  large_world_example.json  large_world_test.json  main_scene.json  minimal_physics_test.json  physical_audio_demo.json  physical_audio_demo_backup.json  physics_components_test.json  physics_cube_tip.json  physics_debug_test.json  physics_demo.json  physics_demo_fixed.json  physics_scene_template.json  physics_stacking.json  physics_test.json  physics_working_test.json  scripted_demo.json  simple_physics_test.json  simple_test.json  test.json  test_10_million.json  test_auto_properties.json  test_color_pulse.json  test_color_pulse_fixed.json  test_material_simple.json  test_material_updates.json  test_mesh_generation.json  test_property_persistence.json  test_property_persistence_scene.json  test_script_properties.json
game/src/: debug_audio.rs  main.rs
(+193 files in other folders)
