[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
imgui = "0.12"
imgui-sys = { version = "0.12", optional = true }
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
winit = "0.30"
wgpu = "25.0.2"
tracing = "0.1"
glam = { version = "0.30.4", features = ["bytemuck", "serde"] }
hecs = "0.10"
rfd = "0.14"

[features]
default = []
viewport = ["imgui-sys"]