[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[example]]
name = "scene_demo"
path = "../.claude/examples/scene_demo.rs"

[dependencies]
wgpu = "25.0.2"
winit = "0.30"
glam = { version = "0.30.4", features = ["bytemuck", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hecs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytemuck = { version = "1.23", features = ["derive"] }
notify = "6.0"