[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_derive = { path = "../engine_derive" }
wgpu = "25.0.2"
winit = "0.30"
glam = { version = "0.30.4", features = ["bytemuck", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hecs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytemuck = { version = "1.23", features = ["derive"] }
notify = "6.0"
rhai = { version = "1.19", features = ["sync"] }
pollster = "0.3"
lazy_static = "1.4"
tobj = { version = "4.0", features = ["async"] }
thiserror = "1.0"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "validate_physics_scene"
path = "src/bin/validate_physics_scene.rs"

[[bin]]
name = "test_physics_debug" 
path = "src/bin/test_physics_debug.rs"

[[bin]]
name = "test_avbd_solver"
path = "src/bin/test_avbd_solver.rs"

[[bin]]
name = "test_reduced_gravity"
path = "src/bin/test_reduced_gravity.rs"

[[example]]
name = "scene_demo"
path = "../examples/scene_demo.rs"