[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_derive = { path = "../engine_derive" }
wgpu = "25.0.2"
winit = "0.30"
glam = { version = "0.30.4", features = ["bytemuck", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hecs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytemuck = { version = "1.23", features = ["derive"] }
notify = "6.0"
rhai = { version = "1.19", features = ["sync"] }
pollster = "0.3"
lazy_static = "1.4"
tobj = { version = "4.0", features = ["async"] }
thiserror = "1.0"
rayon = "1.10"
rapier3d-f64 = "0.17"
tracy-client = { version = "0.18", optional = true }
once_cell = "1.19"
wgpu-profiler = { version = "0.23", optional = true, default-features = false }

[features]
tracy = ["tracy-client/enable", "wgpu-profiler/tracy"]

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "scene_demo"
path = "../examples/scene_demo.rs"