[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
default = ["editor"]
editor = ["dep:editor"]
tracy = ["engine/tracy", "editor?/tracy", "tracy-client"]
audio = ["engine/audio", "editor?/audio", "dep:rodio"]

[dependencies]
engine = { path = "../engine" }
editor = { path = "../editor", optional = true }
winit = "0.30"
pollster = "0.3"
tracing = "0.1"
tracy-client = { version = "0.18", optional = true }
rodio = { version = "0.17", optional = true }
glam = { version = "0.30.4", features = ["bytemuck", "serde"] }
